Fix imageblockcontent spacing

--- a/src/sass/components/imagecontentblock.scss
+++ b/src/sass/components/imagecontentblock.scss
@@ -9,8 +9,8 @@
 	}
 
 	@include AU-media( sm ) {
-		margin-top: 4rem;
-		margin-bottom: 4rem;
+		//margin-top: 4rem;
+		//margin-bottom: 4rem;
 	}
 
 	&.imagecontentblock--white {
